# GeneralServer

./: AbstractSearcher.cpp  AbstractSearcher.h  Astar.h  BestFirstSearch.cpp  BestFirstSearch.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.cpp  ClientHandler.h  DepthFirstSearch.cpp  DepthFirstSearch.h  FileCacheManager.cpp  FileCacheManager.h  ISearchable.cpp  ISearchable.h  ISearcher.cpp  ISearcher.h  Matrix.cpp  Matrix.h  MatrixSearchSolver.cpp  MatrixSearchSolver.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MyPriorityQueue.cpp  MyPriorityQueue.h  MySerialServer.cpp  MySerialServer.h  MyStringConverter.cpp  MyStringConverter.h  OA.cpp  OA.h  README.md  Searchable.cpp  Searchable.h  Searcher.cpp  (+12 more)
